# tree-sitter-yul

./: .gitignore  Cargo.toml  binding.gyp  grammar.js  package.json  tree-sitter.json
bindings/node/: binding.cc
bindings/rust/: build.rs  lib.rs
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: assignments.txt  blocks.txt  comments.txt  control_flow.txt  function_calls.txt  function_definitions.txt  literals.txt  objects.txt  variable_declarations.txt
