[package]
name = "tree-sitter-yul"
description = "Yul grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "yul", "solidity"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/czepluch/tree-sitter-yul"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.25"
